tdf#101936 sw: ignore comment anchors during search

Comments are anchored by unicode character U+fff9.
If the comment was anchored in the middle of a word, then a search
would not find that word.  A comment anchor is not a word-breaking
character, so remove it instead of replacing it with 0x7f.

Change-Id: I4606dbfac74161029029d9807b74bd6ffa285126